syntax = "proto3";

option go_package = "github.com/Mau-MD/SSEngine/libs/proto";

service MasterService {
    rpc ConnectToStreamNode(ConnectToStreamNodeRequest) returns (ConnectToStreamNodeResponse) {}
    rpc AssignAndGetStreamNode(AssignAndGetStreamNodeRequest) returns (AssignAndGetStreamNodeResponse) {}
    rpc GetStreamNode(GetStreamNodeRequest) returns (GetStreamNodeResponse) {}
    rpc TerminateSession(TerminateSessionRequest) returns (TerminateSessionResponse) {}
}

message ConnectToStreamNodeRequest {
    StreamNode stream_node = 1;
}

message ConnectToStreamNodeResponse {
    bool success = 1;
}

message AssignAndGetStreamNodeRequest {
    string session_id = 1;
}

message AssignAndGetStreamNodeResponse {
    string stream_node_uri = 1;
}

message GetStreamNodeRequest {
    string session_id = 1;
}

message GetStreamNodeResponse {
    string stream_node_uri = 1;
}

message TerminateSessionRequest {
    string session_id = 1;
}

message TerminateSessionResponse {
    bool success = 1;
}

message StreamNode {
    string id = 1;
    string uri = 2;
    int32 load = 3;
    int32 capacity = 4;
}